--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </p>
         <!-- Logo row -->
         <div class="flex items-center gap-3 mb-8">
-          <img src="/img/sanfuimg.png" alt="三孚商贸" class="w-10 h-10 md:w-12 md:h-12 rounded-xl object-contain bg-appleBg p-1.5">
+          <img src="img/sanfuimg.png" alt="三孚商贸" class="w-10 h-10 md:w-12 md:h-12 rounded-xl object-contain bg-appleBg p-1.5">
           <div>
             <p class="text-appleBlack text-[13px] md:text-sm font-semibold font-chinese">三晶光学 & 三孚商贸</p>
             <p class="text-appleGray text-[10px] md:text-xs font-chinese">广州 · 专注镜片行业</p>
@@ -172,7 +172,7 @@
           <!-- Essilor -->
           <div class="apple-card bg-appleBg rounded-2xl overflow-hidden cursor-pointer group flex-shrink-0 snap-start w-[280px] sm:w-[300px] md:w-[320px] lg:w-[340px]">
             <div class="img-zoom h-[140px] md:h-[160px] overflow-hidden rounded-t-2xl bg-gray-100">
-              <img src="/img/essilor_img.png" alt="依视路 Essilor" class="w-full h-full object-cover">
+              <img src="img/essilor_img.png" alt="依视路 Essilor" class="w-full h-full object-cover">
             </div>
             <div class="p-4 md:p-5">
               <div class="flex items-center gap-1.5 mb-2.5">
@@ -196,7 +196,7 @@
           <!-- Euclid -->
           <div class="apple-card bg-appleBg rounded-2xl overflow-hidden cursor-pointer group flex-shrink-0 snap-start w-[280px] sm:w-[300px] md:w-[320px] lg:w-[340px]">
             <div class="img-zoom h-[140px] md:h-[160px] overflow-hidden rounded-t-2xl bg-gray-100">
-              <img src="/img/euclidxxl.png" alt="欧几里德 Euclid" class="w-full h-full object-cover">
+              <img src="img/euclidxxl.png" alt="欧几里德 Euclid" class="w-full h-full object-cover">
             </div>
             <div class="p-4 md:p-5">
               <div class="flex items-center gap-1.5 mb-2.5">
